changes: changed build.gradle for ci/cd