@@ -43,6 +43,9 @@ dependencies {
 }
 
 tasks.named('test') {
+	jvmArgs = [
+			'-XX:+EnableDynamicAgentLoading',
+	]
 	useJUnitPlatform()
 }
 
